CPP01 ex05 finished

--- a/CPP_01/ex05/Makefile
+++ b/CPP_01/ex05/Makefile
@@ -8,7 +8,7 @@
 # ************************************************************************ #
 
 NAME		= harl
-HEADER		= Zombie.hpp
+HEADER		= Harl.hpp
 SRC			= main.cpp Harl.cpp
 
 OBJ			= $(SRC:.cpp=.o)
@@ -29,7 +29,7 @@ all:		$(NAME)
 
 $(NAME):	$(OBJ) $(HEADER) Makefile
 			@${CPP} ${CPPFLAGS} ${OBJ} -o ${NAME}
-			@echo "$(GREEN)\n    COMPILED 📇\n$(NC)"
+			@echo "$(GREEN)\n   H A R L    C O M P I L E D \n$(NC)"
 
 %.o:	%.cpp
 		@$(CPP) $(CPPFLAGS) -c $< -o $@
