CPP03 ex00 finished

--- a/CPP_03/ex00/Makefile
+++ b/CPP_03/ex00/Makefile
@@ -20,7 +20,8 @@ all:	$(NAME)
 
 $(NAME): $(OBJ) Makefile
 	${CPP} ${CPPFLAGS} ${OBJ} -o ${NAME}
-	@echo "$(GREEN)\n✨ COMPILED ✨\n$(NC)
+	@echo "$(GREEN)\n✨ COMPILED ✨\n$(NC)"
+
 %.o: %.cpp
 	@$(CPP) $(CPPFLAGS) -c $< -o $@
 
