--- a/CPP_05/ex01/Makefile
+++ b/CPP_05/ex01/Makefile
@@ -9,10 +9,10 @@
 NAME        = Bureaucrat
 
 DIR_SRC     = src
-SRC         = $(DIR_SRC)/main.cpp $(DIR_SRC)/Bureaucrat.cpp
+SRC         = $(DIR_SRC)/main.cpp $(DIR_SRC)/Bureaucrat.cpp $(DIR_SRC)/Form.cpp
 
 DIR_HDR     = hdr
-HDR         = $(DIR_HDR)/Bureaucrat.hpp
+HDR         = $(DIR_HDR)/Bureaucrat.hpp $(DIR_HDR)/Form.hpp
 
 DIR_OBJ     = obj
 OBJ         = $(patsubst $(DIR_SRC)/%.cpp,$(DIR_OBJ)/%.o,$(SRC))
