--- a/CPP_05/ex02/Makefile
+++ b/CPP_05/ex02/Makefile
@@ -9,10 +9,14 @@
 NAME        = Bureaucrat
 
 DIR_SRC     = src
-SRC         = $(DIR_SRC)/main.cpp $(DIR_SRC)/Bureaucrat.cpp $(DIR_SRC)/Form.cpp
+SRC         = $(DIR_SRC)/main.cpp $(DIR_SRC)/Bureaucrat.cpp $(DIR_SRC)/AForm.cpp $(DIR_SRC)/PresidentialPardonForm.cpp\
+			#$(DIR_SRC)/ShrubberyCreationForm.cpp $(DIR_SRC)/RobotomyRequestForm.cpp \
+			$(DIR_SRC)/PresidentialPardonForm.cpp
 
 DIR_HDR     = hdr
-HDR         = $(DIR_HDR)/Bureaucrat.hpp $(DIR_HDR)/Form.hpp
+HDR         = $(DIR_HDR)/Bureaucrat.hpp $(DIR_HDR)/AForm.hpp $(DIR_HDR)/PresidentialPardonForm.hpp\ 
+			#$(DIR_HDR)/ShrubberyCreationForm.hpp $(DIR_HDR)/RobotomyRequestForm.hpp \
+			
 
 DIR_OBJ     = obj
 OBJ         = $(patsubst $(DIR_SRC)/%.cpp,$(DIR_OBJ)/%.o,$(SRC))
