--- a/CPP_06/ex00/Makefile
+++ b/CPP_06/ex00/Makefile
@@ -9,14 +9,10 @@
 NAME        = Bureaucrat
 
 DIR_SRC     = src
-SRC         = $(DIR_SRC)/main.cpp $(DIR_SRC)/Bureaucrat.cpp $(DIR_SRC)/AForm.cpp \
-              $(DIR_SRC)/ShrubberyCreationForm.cpp $(DIR_SRC)/RobotomyRequestForm.cpp \
-              $(DIR_SRC)/PresidentialPardonForm.cpp $(DIR_SRC)/Intern.cpp
+SRC         = $(DIR_SRC)/main.cpp $(DIR_SRC)/Bureaucrat.cpp
 
 DIR_HDR     = hdr
-HDR         = $(DIR_HDR)/Bureaucrat.hpp $(DIR_HDR)/AForm.hpp $(DIR_HDR)/PresidentialPardonForm.hpp \
-              $(DIR_HDR)/ShrubberyCreationForm.hpp $(DIR_HDR)/RobotomyRequestForm.hpp \
-			  $(DIR_HDR)/Intern.hpp
+HDR         = $(DIR_HDR)/Bureaucrat.hpp
 
 DIR_OBJ     = obj
 OBJ         = $(patsubst $(DIR_SRC)/%.cpp,$(DIR_OBJ)/%.o,$(SRC))
@@ -53,4 +49,3 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re
-
