check some details, but almost finished

--- a/CPP_06/.vscode/settings.json
+++ b/CPP_06/.vscode/settings.json
@@ -46,6 +46,8 @@
         "random": "cpp",
         "tuple": "cpp",
         "utility": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "ctime": "cpp",
+        "iomanip": "cpp"
     }
 }
